--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ CTYPE html>
 
 		        <p>This is a basic HTML page. You can customize it as per your needs.</p>
 
-			    <p>Feel free to add more content, styles, and elements to make it your own!</p>
+			    <p>WARM WELCOME TO YOU!</p>
 
 	</body>
 
