--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
-CTYPE html>
+
 <html lang="en">
 
 	<head>
-		    <meta charset="UTF-8">
-		        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-			    <title>Your Page Title</title>
-			        <style>
-        body {
-		            font-family: Arial, sans-serif;
-			                margin: 20px;
-					            padding: 20px;
-						            }
+	    <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>Your Page Title</title>
 
-	        h1 {
-			            color: #333;
-				            }
+	    <style>
+                <body> {
+		  font-family: Arial, sans-serif;
+	
+		  margin: 20px;
+	
+		  padding: 20px;
+	
+	          }
 
-		        p {
-				            color: #666;
-					            }
-			    </style>
+	 
+		h1 {
+
+		  color: #333;
+	
+  		   }
+
+
+		p {
+
+	
+			color: #666;
+	
+	
+		 }
+
+	    </style>
 	</head>
 
-	<body>
+	        <body>
 
 		    <h1>Welcome to Your Website</h1>
 
-		        <p>This is a basic HTML page. You can customize it as per your needs.</p>
+		    <p>This is a basic HTML page. You can customize it as per your needs.</p>
 
-			    <p>WARM WELCOME TO YOU!</p>
+		    <p>WARM WELCOME TO YOU!</p>
 
-	</body>
+    	        </body>
 
 </html>
 
