--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		    <p>This is a basic HTML page. You can customize it as per your needs.</p>
 
 		    <p>WARM WELCOME TO YOU!</p>
+		    <h1> thank you </h1>
 
     	        </body>
 
