--- a/index.html
+++ b/index.html
@@ -1,51 +1,69 @@
-
+CTYPE html>
 <html lang="en">
 
 	<head>
-	    <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Your Page Title</title>
+		    <meta charset="UTF-8">
+		        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+			    <title>Awesome Welcome Page</title>
+			        <style>
+        body {
+		            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+			                margin: 0;
+					            padding: 0;
+						                display: flex;
+								            align-items: center;
+									                justify-content: center;
+											            height: 100vh;
+												                background-color: #f5f5f5;
+														        }
 
-	    <style>
-                <body> {
-		  font-family: Arial, sans-serif;
-	
-		  margin: 20px;
-	
-		  padding: 20px;
-	
-	          }
+	        .welcome-container {
+			            text-align: center;
+				                padding: 20px;
+						            background-color: #fff;
+							                border-radius: 10px;
+									            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+										            }
 
-	 
-		h1 {
+		        h1 {
+				            color: #3498db;
+					            }
 
-		  color: #333;
-	
-  		   }
+			        p {
+					            color: #555;
+						                font-size: 1.2em;
+								            margin-bottom: 20px;
+									            }
 
+				        .cta-button {
+						            display: inline-block;
+							                padding: 10px 20px;
+									            background-color: #3498db;
+										                color: #fff;
+												            text-decoration: none;
+													                font-size: 1.2em;
+															            border-radius: 5px;
+																                transition: background-color 0.3s ease;
+																		        }
 
-		p {
-
-	
-			color: #666;
-	
-	
-		 }
-
-	    </style>
+					        .cta-button:hover {
+							            background-color: #2980b9;
+								            }
+						    </style>
 	</head>
 
-	        <body>
+	<body>
 
-		    <h1>Welcome to Your Website</h1>
+		    <div class="welcome-container">
+			            <h1>Welcome to Your Awesome Website</h1>
+				            <p>This is a stylish and attractive welcome page. Feel free to explore and make it your own!</p>
+					            <a href="#" class="cta-button">Get Started</a>
+						        </div>
 
-		    <p>This is a basic HTML page. You can customize it as per your needs.</p>
-
-		    <p>WARM WELCOME TO YOU!</p>
-		    <h1> thank you </h1>
-
-    	        </body>
+	</body>
 
 </html>
+
+
 
 
